test/official_tests/operator/less_nonnum_num.lox
"1" < 1; // error: {"line":1,"message":"Operator '<': incompatible types 'string' and 'number'","type":"RuntimeError"}
